--- a/main.css
+++ b/main.css
@@ -8,9 +8,9 @@ body {
 }
 
 .card {
-  /* margin: 20px;
-  padding: 20px; */
-  flex: 1 1 30%;
+  margin: 20px;
+  padding: 20px;
+  /* flex: 1 1 30%; */
 }
 
 img {
