--- a/main.css
+++ b/main.css
@@ -1,20 +1,12 @@
-body {
-  background-color: gold;
-}
-
-.cards {
+.container {
   display: flex;
   flex-wrap: wrap;
 }
 
 .card {
-  margin: 20px;
-  padding: 20px;
-  /* flex: 1 1 30%; */
-}
-
-img {
-  width: 100%;
-  height: 20vw;
-  object-fit: cover;
+  border: solid 1px black;
+  margin: 5px;
+  padding: 10px;
+  flex: 1 1 30%;
+  box-sizing: border-box;
 }
