--- a/main.css
+++ b/main.css
@@ -2,11 +2,25 @@
   margin: 0;
 }
 
+body {
+  background-color: lightblue;
+}
+
+.heading-top {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  text-shadow: 1px 1px 10px darkgray;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
+
 }
 
 .card {
@@ -15,6 +29,7 @@
   margin: 5px;
   flex: 1 1 30%;
   box-sizing: border-box;
+  background-color: whitesmoke;
 }
 
 .card-header {
